feat: add delete layer endpoint
